# BriefCASE

./: .gitattributes  .travis.yml  Dockerfile  README.md  buildspec.yml  git-setup.sh  pom.xml
.github/workflows/: build_and_test.yml  release.yml  snapshot.yml
.travis/: .project  manage_daily_builds.py
briefcase/: .classpath  .gitignore  .project  build.properties  plugin.xml  pom.xml
briefcase-releng/: .project
briefcase-releng/version-management/: release.digest  release.properties  release.xml
briefcase/resources/: CASE_Modeling_Guidelines.aadl
com.collins.trustedsystems.briefcase.agreecheck/: .project  plugin.xml  pom.xml
com.collins.trustedsystems.briefcase.agreelib/: .project  plugin.xml  pom.xml
com.collins.trustedsystems.briefcase.assurance/: .project  plugin.xml  pom.xml
com.collins.trustedsystems.briefcase.attestation/: .project  build.properties  pom.xml
com.collins.trustedsystems.briefcase.attestation/resources/: CakeMLHelper.cmake
com.collins.trustedsystems.briefcase.attestation/resources/apps/case-tool-assessment/: CMakeLists.txt  Heli.sml  README.md
com.collins.trustedsystems.briefcase.fileaccess/: .project  plugin.xml  pom.xml
com.collins.trustedsystems.briefcase.json/: .classpath  .gitignore  .project  build.properties  plugin.xml_gen  pom.xml
com.collins.trustedsystems.briefcase.json.export/: .classpath  .project  build.properties  plugin.xml  pom.xml
com.collins.trustedsystems.briefcase.json.ui/: .project  plugin.xml  plugin.xml_gen  pom.xml
com.collins.trustedsystems.briefcase.json/.launch/: Generate Json (json) Language Infrastructure.launch  Launch Runtime Eclipse.launch
com.collins.trustedsystems.briefcase.modelaccess/: .project  plugin.xml  pom.xml
com.collins.trustedsystems.briefcase.site/: .project  category.xml  packaging-p2composite.ant  pom.xml
feature/: .project  feature.xml  pom.xml
json/: pom.xml
repository/: category.xml  pom.xml
splat/: .project  build.properties  plugin.xml  pom.xml
splat/resources/: libpolyml.so.9  splat  (+1 more)
staircase/: .project  build.properties  plugin.xml  pom.xml
target-platform/: .project  com.collins.trustedsystems.briefcase.target.target  pom.xml
toolcheck/: .project  build.properties  pom.xml
(+210 files in other folders)
